Integrated logs into allure, fixed/suppressed some warnings, changed project structure